--- a/Cookie/Cookie/CKRecipesView.xib
+++ b/Cookie/Cookie/CKRecipesView.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1938</string>
+			<string key="NS.object.0">2182</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSScroller</string>
@@ -55,7 +55,6 @@
 						<string key="NSFrame">{{484, 20}, {96, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:918</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSSearchFieldCell" key="NSCell" id="975758564">
@@ -163,17 +162,15 @@
 																<string key="NSFrameSize">{518, 17}</string>
 																<reference key="NSSuperview" ref="43277927"/>
 																<reference key="NSWindow"/>
-																<reference key="NSNextKeyView" ref="963468366"/>
+																<reference key="NSNextKeyView" ref="368779099"/>
 																<bool key="NSViewCanDrawConcurrently">YES</bool>
 																<string key="NSReuseIdentifierKey">_NS:16</string>
 																<reference key="NSTableView" ref="420029149"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="963468366">
-																<reference key="NSNextResponder" ref="245819107"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="245819107"/>
-																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="368779099"/>
 																<string key="NSReuseIdentifierKey">_NS:19</string>
 															</object>
@@ -281,7 +278,7 @@
 													<string key="NSFrame">{{1, 236}, {438, 15}}</string>
 													<reference key="NSSuperview" ref="245819107"/>
 													<reference key="NSWindow"/>
-													<reference key="NSNextKeyView" ref="151960275"/>
+													<reference key="NSNextKeyView" ref="722556266"/>
 													<string key="NSReuseIdentifierKey">_NS:60</string>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="245819107"/>
@@ -303,7 +300,6 @@
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="963468366"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="82563441"/>
@@ -315,7 +311,6 @@
 											<reference key="NSHScroller" ref="859057640"/>
 											<reference key="NSContentView" ref="368779099"/>
 											<reference key="NSHeaderClipView" ref="43277927"/>
-											<reference key="NSCornerView" ref="963468366"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -361,16 +356,15 @@
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{518, 17}</string>
 																<reference key="NSSuperview" ref="858577175"/>
-																<reference key="NSNextKeyView" ref="607138289"/>
+																<reference key="NSNextKeyView" ref="210162039"/>
 																<bool key="NSViewCanDrawConcurrently">YES</bool>
 																<string key="NSReuseIdentifierKey">_NS:16</string>
 																<reference key="NSTableView" ref="795790159"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="607138289">
-																<reference key="NSNextResponder" ref="583601559"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="583601559"/>
 																<reference key="NSNextKeyView" ref="210162039"/>
 																<string key="NSReuseIdentifierKey">_NS:19</string>
 															</object>
@@ -471,7 +465,6 @@
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="607138289"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="1021005106"/>
@@ -482,7 +475,6 @@
 											<reference key="NSHScroller" ref="100371411"/>
 											<reference key="NSContentView" ref="210162039"/>
 											<reference key="NSHeaderClipView" ref="858577175"/>
-											<reference key="NSCornerView" ref="607138289"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -525,11 +517,10 @@
 																<string key="NSReuseIdentifierKey">_NS:16</string>
 																<reference key="NSTableView" ref="82221951"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="651892984">
-																<reference key="NSNextResponder" ref="493666393"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="493666393"/>
 																<reference key="NSNextKeyView" ref="278534917"/>
 																<string key="NSReuseIdentifierKey">_NS:19</string>
 															</object>
@@ -630,7 +621,6 @@
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="651892984"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="48510142"/>
@@ -641,7 +631,6 @@
 											<reference key="NSHScroller" ref="359296206"/>
 											<reference key="NSContentView" ref="278534917"/>
 											<reference key="NSHeaderClipView" ref="989185290"/>
-											<reference key="NSCornerView" ref="651892984"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -690,27 +679,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">platsTable</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="795790159"/>
-					</object>
-					<int key="connectionID">176</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">entreesTable</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="420029149"/>
 					</object>
 					<int key="connectionID">177</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">dessertsTable</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="82221951"/>
-					</object>
-					<int key="connectionID">178</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -730,6 +703,22 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
+						<string key="label">dessertsTable</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="82221951"/>
+					</object>
+					<int key="connectionID">178</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">platsTable</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="795790159"/>
+					</object>
+					<int key="connectionID">176</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="420029149"/>
 						<reference key="destination" ref="307874707"/>
@@ -746,14 +735,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">dataSource</string>
-						<reference key="source" ref="795790159"/>
-						<reference key="destination" ref="307874707"/>
-					</object>
-					<int key="connectionID">162</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="795790159"/>
 						<reference key="destination" ref="307874707"/>
@@ -763,10 +744,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="82221951"/>
+						<reference key="source" ref="795790159"/>
 						<reference key="destination" ref="307874707"/>
 					</object>
-					<int key="connectionID">173</int>
+					<int key="connectionID">162</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -775,6 +756,14 @@
 						<reference key="destination" ref="307874707"/>
 					</object>
 					<int key="connectionID">174</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">dataSource</string>
+						<reference key="source" ref="82221951"/>
+						<reference key="destination" ref="307874707"/>
+					</object>
+					<int key="connectionID">173</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -836,22 +825,6 @@
 						<reference key="parent" ref="722556266"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">152</int>
-						<reference key="object" ref="1026104893"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="1021005106"/>
-						</array>
-						<reference key="parent" ref="722556266"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">153</int>
-						<reference key="object" ref="1021005106"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="583601559"/>
-						</array>
-						<reference key="parent" ref="1026104893"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">154</int>
 						<reference key="object" ref="82563441"/>
 						<array class="NSMutableArray" key="children">
@@ -907,51 +880,17 @@
 						<reference key="parent" ref="937899725"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">155</int>
-						<reference key="object" ref="583601559"/>
+						<int key="objectID">179</int>
+						<reference key="object" ref="151960275"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="921548202"/>
-							<reference ref="231013767"/>
-							<reference ref="100371411"/>
-							<reference ref="795790159"/>
+							<reference ref="975758564"/>
 						</array>
-						<reference key="parent" ref="1021005106"/>
+						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">156</int>
-						<reference key="object" ref="921548202"/>
-						<reference key="parent" ref="583601559"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">157</int>
-						<reference key="object" ref="231013767"/>
-						<reference key="parent" ref="583601559"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">158</int>
-						<reference key="object" ref="100371411"/>
-						<reference key="parent" ref="583601559"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">159</int>
-						<reference key="object" ref="795790159"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="255135990"/>
-						</array>
-						<reference key="parent" ref="583601559"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">160</int>
-						<reference key="object" ref="255135990"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="985104179"/>
-						</array>
-						<reference key="parent" ref="795790159"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">161</int>
-						<reference key="object" ref="985104179"/>
-						<reference key="parent" ref="255135990"/>
+						<int key="objectID">180</int>
+						<reference key="object" ref="975758564"/>
+						<reference key="parent" ref="151960275"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">164</int>
@@ -981,21 +920,6 @@
 						<reference key="parent" ref="48510142"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">167</int>
-						<reference key="object" ref="7546593"/>
-						<reference key="parent" ref="493666393"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">168</int>
-						<reference key="object" ref="749684564"/>
-						<reference key="parent" ref="493666393"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">169</int>
-						<reference key="object" ref="359296206"/>
-						<reference key="parent" ref="493666393"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">170</int>
 						<reference key="object" ref="82221951"/>
 						<array class="NSMutableArray" key="children">
@@ -1017,17 +941,82 @@
 						<reference key="parent" ref="765088531"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">179</int>
-						<reference key="object" ref="151960275"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="975758564"/>
-						</array>
-						<reference key="parent" ref="1005"/>
+						<int key="objectID">169</int>
+						<reference key="object" ref="359296206"/>
+						<reference key="parent" ref="493666393"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">180</int>
-						<reference key="object" ref="975758564"/>
-						<reference key="parent" ref="151960275"/>
+						<int key="objectID">168</int>
+						<reference key="object" ref="749684564"/>
+						<reference key="parent" ref="493666393"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">167</int>
+						<reference key="object" ref="7546593"/>
+						<reference key="parent" ref="493666393"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">152</int>
+						<reference key="object" ref="1026104893"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1021005106"/>
+						</array>
+						<reference key="parent" ref="722556266"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">153</int>
+						<reference key="object" ref="1021005106"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="583601559"/>
+						</array>
+						<reference key="parent" ref="1026104893"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">155</int>
+						<reference key="object" ref="583601559"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="921548202"/>
+							<reference ref="231013767"/>
+							<reference ref="100371411"/>
+							<reference ref="795790159"/>
+						</array>
+						<reference key="parent" ref="1021005106"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">159</int>
+						<reference key="object" ref="795790159"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="255135990"/>
+						</array>
+						<reference key="parent" ref="583601559"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">160</int>
+						<reference key="object" ref="255135990"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="985104179"/>
+						</array>
+						<reference key="parent" ref="795790159"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">161</int>
+						<reference key="object" ref="985104179"/>
+						<reference key="parent" ref="255135990"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">158</int>
+						<reference key="object" ref="100371411"/>
+						<reference key="parent" ref="583601559"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">157</int>
+						<reference key="object" ref="231013767"/>
+						<reference key="parent" ref="583601559"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">156</int>
+						<reference key="object" ref="921548202"/>
+						<reference key="parent" ref="583601559"/>
 					</object>
 				</array>
 			</object>
