--- a/Cookie/Cookie/CKRecipesView.xib
+++ b/Cookie/Cookie/CKRecipesView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1938</string>
+			<string key="NS.object.0">2182</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSScroller</string>
@@ -55,7 +55,6 @@
 						<string key="NSFrame">{{484, 20}, {96, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSSearchFieldCell" key="NSCell" id="975758564">
 							<int key="NSCellFlags">343014976</int>
@@ -129,7 +128,7 @@
 						<string key="NSFrame">{{13, 40}, {574, 446}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1021005106"/>
+						<reference key="NSNextKeyView" ref="48510142"/>
 						<array class="NSMutableArray" key="NSTabViewItems">
 							<object class="NSTabViewItem" id="902543736">
 								<string key="NSIdentifier">1</string>
@@ -157,15 +156,14 @@
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{518, 17}</string>
 																<reference key="NSSuperview" ref="43277927"/>
-																<reference key="NSNextKeyView" ref="21307921"/>
+																<reference key="NSNextKeyView" ref="368779099"/>
 																<bool key="NSViewCanDrawConcurrently">YES</bool>
 																<reference key="NSTableView" ref="420029149"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="21307921">
-																<reference key="NSNextResponder" ref="245819107"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="245819107"/>
 																<reference key="NSNextKeyView" ref="368779099"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -237,6 +235,7 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
 													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
@@ -265,6 +264,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 236}, {438, 15}}</string>
 													<reference key="NSSuperview" ref="245819107"/>
+													<reference key="NSNextKeyView" ref="151960275"/>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="245819107"/>
 													<string key="NSAction">_doScroller:</string>
@@ -283,17 +283,15 @@
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="21307921"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="82563441"/>
 											<reference key="NSNextKeyView" ref="43277927"/>
-											<int key="NSsFlags">562</int>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="463491155"/>
 											<reference key="NSHScroller" ref="859057640"/>
 											<reference key="NSContentView" ref="368779099"/>
 											<reference key="NSHeaderClipView" ref="43277927"/>
-											<reference key="NSCornerView" ref="21307921"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
@@ -312,7 +310,7 @@
 							<object class="NSTabViewItem" id="1026104893">
 								<string key="NSIdentifier">2</string>
 								<object class="NSView" key="NSView" id="1021005106">
-									<reference key="NSNextResponder" ref="722556266"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">256</int>
 									<array class="NSMutableArray" key="NSSubviews">
 										<object class="NSScrollView" id="583601559">
@@ -328,7 +326,6 @@
 															<int key="NSvFlags">256</int>
 															<string key="NSFrameSize">{518, 362}</string>
 															<reference key="NSSuperview" ref="210162039"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="921548202"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTableHeaderView" key="NSHeaderView" id="231013767">
@@ -336,17 +333,14 @@
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{518, 17}</string>
 																<reference key="NSSuperview" ref="858577175"/>
-																<reference key="NSWindow"/>
-																<reference key="NSNextKeyView" ref="604392833"/>
+																<reference key="NSNextKeyView" ref="210162039"/>
 																<bool key="NSViewCanDrawConcurrently">YES</bool>
 																<reference key="NSTableView" ref="795790159"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="604392833">
-																<reference key="NSNextResponder" ref="583601559"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="583601559"/>
-																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="210162039"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -393,11 +387,11 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
 													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
 													<reference key="NSSuperview" ref="583601559"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="795790159"/>
 													<reference key="NSDocView" ref="795790159"/>
 													<object class="NSColor" key="NSBGColor">
@@ -411,7 +405,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="583601559"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="100371411"/>
 													<reference key="NSTarget" ref="583601559"/>
 													<string key="NSAction">_doScroller:</string>
@@ -423,8 +416,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 236}, {438, 15}}</string>
 													<reference key="NSSuperview" ref="583601559"/>
-													<reference key="NSWindow"/>
-													<reference key="NSNextKeyView" ref="722556266"/>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="583601559"/>
 													<string key="NSAction">_doScroller:</string>
@@ -438,30 +429,24 @@
 													</array>
 													<string key="NSFrame">{{1, 0}, {518, 17}}</string>
 													<reference key="NSSuperview" ref="583601559"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="231013767"/>
 													<reference key="NSDocView" ref="231013767"/>
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="604392833"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="1021005106"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="858577175"/>
-											<int key="NSsFlags">562</int>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="921548202"/>
 											<reference key="NSHScroller" ref="100371411"/>
 											<reference key="NSContentView" ref="210162039"/>
 											<reference key="NSHeaderClipView" ref="858577175"/>
-											<reference key="NSCornerView" ref="604392833"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
 									<string key="NSFrame">{{10, 33}, {554, 400}}</string>
-									<reference key="NSSuperview" ref="722556266"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="583601559"/>
 								</object>
 								<string key="NSLabel">Plats</string>
@@ -470,7 +455,7 @@
 							</object>
 							<object class="NSTabViewItem" id="875363988">
 								<object class="NSView" key="NSView" id="48510142">
-									<nil key="NSNextResponder"/>
+									<reference key="NSNextResponder" ref="722556266"/>
 									<int key="NSvFlags">256</int>
 									<array class="NSMutableArray" key="NSSubviews">
 										<object class="NSScrollView" id="493666393">
@@ -486,22 +471,23 @@
 															<int key="NSvFlags">256</int>
 															<string key="NSFrameSize">{518, 362}</string>
 															<reference key="NSSuperview" ref="278534917"/>
-															<reference key="NSNextKeyView" ref="989185290"/>
+															<reference key="NSWindow"/>
+															<reference key="NSNextKeyView" ref="7546593"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTableHeaderView" key="NSHeaderView" id="749684564">
 																<reference key="NSNextResponder" ref="989185290"/>
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{518, 17}</string>
 																<reference key="NSSuperview" ref="989185290"/>
+																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="278534917"/>
 																<bool key="NSViewCanDrawConcurrently">YES</bool>
 																<reference key="NSTableView" ref="82221951"/>
 															</object>
-															<object class="_NSCornerView" key="NSCornerView" id="190220943">
-																<reference key="NSNextResponder" ref="493666393"/>
+															<object class="_NSCornerView" key="NSCornerView">
+																<nil key="NSNextResponder"/>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-																<reference key="NSSuperview" ref="493666393"/>
 																<reference key="NSNextKeyView" ref="278534917"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
@@ -549,10 +535,12 @@
 															<int key="NSDraggingSourceMaskForNonLocal">0</int>
 															<bool key="NSAllowsTypeSelect">YES</bool>
 															<int key="NSTableViewDraggingDestinationStyle">0</int>
+															<int key="NSTableViewGroupRowStyle">1</int>
 														</object>
 													</array>
 													<string key="NSFrame">{{1, 17}, {518, 362}}</string>
 													<reference key="NSSuperview" ref="493666393"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="82221951"/>
 													<reference key="NSDocView" ref="82221951"/>
 													<object class="NSColor" key="NSBGColor">
@@ -566,6 +554,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="493666393"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="359296206"/>
 													<reference key="NSTarget" ref="493666393"/>
 													<string key="NSAction">_doScroller:</string>
@@ -577,7 +566,8 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 236}, {438, 15}}</string>
 													<reference key="NSSuperview" ref="493666393"/>
-													<reference key="NSNextKeyView" ref="722556266"/>
+													<reference key="NSWindow"/>
+													<reference key="NSNextKeyView" ref="151960275"/>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="493666393"/>
 													<string key="NSAction">_doScroller:</string>
@@ -591,26 +581,28 @@
 													</array>
 													<string key="NSFrame">{{1, 0}, {518, 17}}</string>
 													<reference key="NSSuperview" ref="493666393"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="749684564"/>
 													<reference key="NSDocView" ref="749684564"/>
 													<reference key="NSBGColor" ref="686925377"/>
 													<int key="NScvFlags">4</int>
 												</object>
-												<reference ref="190220943"/>
 											</array>
 											<string key="NSFrame">{{17, 17}, {520, 380}}</string>
 											<reference key="NSSuperview" ref="48510142"/>
-											<reference key="NSNextKeyView" ref="278534917"/>
-											<int key="NSsFlags">562</int>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView" ref="989185290"/>
+											<int key="NSsFlags">133682</int>
 											<reference key="NSVScroller" ref="7546593"/>
 											<reference key="NSHScroller" ref="359296206"/>
 											<reference key="NSContentView" ref="278534917"/>
 											<reference key="NSHeaderClipView" ref="989185290"/>
-											<reference key="NSCornerView" ref="190220943"/>
 											<bytes key="NSScrollAmts">QSAAAEEgAABCmAAAQpgAAA</bytes>
 										</object>
 									</array>
 									<string key="NSFrame">{{10, 33}, {554, 400}}</string>
+									<reference key="NSSuperview" ref="722556266"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="493666393"/>
 								</object>
 								<string key="NSLabel">Desserts</string>
@@ -618,13 +610,13 @@
 								<reference key="NSTabView" ref="722556266"/>
 							</object>
 						</array>
-						<reference key="NSSelectedTabViewItem" ref="1026104893"/>
+						<reference key="NSSelectedTabViewItem" ref="875363988"/>
 						<reference key="NSFont" ref="885482038"/>
 						<int key="NSTvFlags">0</int>
 						<bool key="NSAllowTruncatedLabels">YES</bool>
 						<bool key="NSDrawsBackground">YES</bool>
 						<array class="NSMutableArray" key="NSSubviews">
-							<reference ref="1021005106"/>
+							<reference ref="48510142"/>
 						</array>
 					</object>
 				</array>
@@ -1047,20 +1039,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">CKRecipeCell</string>
 					<string key="superclassName">NSTextFieldCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="image">NSImage</string>
-						<string key="rating">NSString</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="image">
-							<string key="name">image</string>
-							<string key="candidateClassName">NSImage</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rating">
-							<string key="name">rating</string>
-							<string key="candidateClassName">NSString</string>
-						</object>
-					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CKRecipeCell.h</string>
